[workspace]
members = ["tuic", "tuic-quinn", "tuic-server", "tuic-client"]
resolver = "2"

[workspace.package]
authors = ["EAimTY <ea.imty@gmail.com>", "Itsusinn <sun@ihsin.dev>"]
version = "1.5.2"
rust-version = "1.85.0"
edition = "2024"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/Itsusinn/tuic"

[profile.release]
opt-level = 3
debug = 0
lto = "fat"
codegen-units = 1
incremental = false
panic = "unwind"
strip = "symbols"
debug-assertions = false
overflow-checks = false
